--- a/navigation_css/promotion.css
+++ b/navigation_css/promotion.css
@@ -45,7 +45,7 @@ html{
     height: 100%;
     display: flex;
     margin: 0 auto;
-    background-color: antiquewhite;
+    background-color: rgb(255, 145, 0);
 }
 
 .container__colum1 {
@@ -78,7 +78,7 @@ html{
 }
 
 .container__colum2__inner{
-    background-color: rgb(36, 0, 119);
+    background-color: rgb(112, 112, 112);
     height: 50%;
 }
 
@@ -116,6 +116,7 @@ html{
     display: flex;
     margin: revert;
     color: white;
+    margin-right: 10px;
 }
 
 .footer__colum1 a{
@@ -175,7 +176,8 @@ html{
 /* ================================================================================================== ĐÂY LÀ PHẦN MEDIA */
 
 @media (max-width: 1000px) {
-    .container {
+    .container,
+    .container__select {
         flex-direction: column;
         align-items: center;
         height: 1720px;
@@ -188,7 +190,8 @@ html{
         height: 860px;
     }
 
-    .footer{
+    .footer,
+    .footer__select{
         flex-direction: column;
         align-items: center;
         height: 800px;
