--- a/navigation_css/promotion.css
+++ b/navigation_css/promotion.css
@@ -216,7 +216,7 @@ html{
     
 }
 .folow__page a{
-    background-color: #ffffff;
+    background-color: #ffffffbb;
     border-radius: 2px;
 
 
@@ -231,6 +231,8 @@ html{
 .folow__page i{
     /* scale: 2; */
     margin-right: 5px;
+    position: relative;
+    vertical-align: middle;
     /* color: #1E90FF; */
 }
 .folow__page a:hover{
@@ -245,13 +247,15 @@ html{
 .share__page a{
     padding: 4px;
     color: black;
-    background-color: #ffffff;
+    background-color: #ffffffbb;
     font-size: 12px;
     font-family: Arial, Helvetica, sans-serif;
     border-radius: 2px;
 }
 .share__page i{
     margin-right: 5px;
+    position: relative;
+    vertical-align: middle;
 }
 .share__page a:hover{
     background-color: white;
@@ -313,10 +317,60 @@ html{
 }
 
 /* ================================================================================================== ĐÂY LÀ PHẦN MENU */
+
+
+.header__inner__menu{
+    position: relative;
+}
 .header__inner__menu i{
     scale: 2;
     color: white;
 }
+/* .header__inner__menu i:hover{
+    color: #1E90FF;
+} */
+
+/* .menuroi{
+    position: relative;;
+} */
+.menuroi a{
+    padding: 23.96px 30px;
+    display: block;
+}
+.noidung{
+    display: none;
+    position: absolute;
+    top: 100%;
+    right: 0;
+    margin-right: 60px;
+}
+.noidung a{
+    text-align: center;
+    padding: 0;
+    display: block;
+    min-width: 100px;
+    width: 100%;
+    /* padding: 8px; */
+    padding: 25px 30px;
+    background-color: black;
+    color: white;
+    font-size: 14px;
+    font-weight: 600;
+}
+.menuroi:hover .noidung{
+    display: block;
+}
+.menuroi:active .noidung{
+    display: block;
+}
+.noidung a:hover{
+    background-color: gray;
+}
+.menuroi a:hover .menuroi i{
+    color: aqua;
+}
+
+
 
 /* ================================================================================================== ĐÂY LÀ PHẦN MEDIA */
 
