--- a/css/truong.css
+++ b/css/truong.css
@@ -38,6 +38,7 @@
     font-family: Montserrat;
     font-weight: 900;
     font-size: 32px;
+    margin-left: 10px;
 }
 .header__inner__logo span{
     font-weight: 100;
@@ -129,7 +130,7 @@
 /* .menuroi{
     position: relative;;
 } */
-.menuroi a{
+/* .menuroi a{
     padding: 26px 30px;
     display: block;
 }
@@ -138,7 +139,7 @@
     position: absolute;
     top: 100%;
     right: 0;
-    /* margin-right: 44px; */
+    
 }
 .noidung a{
     font-size: 14px;
@@ -148,7 +149,6 @@
     display: block;
     min-width: 160px;
     width: 100%;
-    /* padding: 8px; */
     padding: 25px 30px;
     margin-right: 44px;
     background-color: black;
@@ -162,7 +162,7 @@
 }
 .noidung a:hover{
     background-color: gray;
-}
+} */
 /* ==================== ANIMATION ==================== */
 @keyframes hienlen {
     from {
@@ -194,7 +194,15 @@
         transform: rotate(90deg);
     }
 }
-
+@keyframes side_right{
+    form{
+        opacity: 0;
+    }
+    to{
+        opacity: 1;
+        box-shadow: 10px 10px 0px 1000px rgba(0, 0, 0, 0.400);
+    }
+}
 /* ==================== MEDIA ==================== */
 @media screen and (max-width: 1000px) { 
     .header__inner__navigation{
