--- a/navigation_css/promotion.css
+++ b/navigation_css/promotion.css
@@ -9,16 +9,14 @@ html{
     margin: 0 auto;
     justify-content: space-between;
     align-items: center;
-} */
+} */ */
 
 
 /* .app{
-    max-width: 1000px;
-    margin: 0 auto;
-}
-.header{
-    max-width: 1000px;
-    margin: 0 auto;
+    position: relative;
+} */
+/* .header{
+    background-color: #33333349;
 } */
 
 /* ================================================================================================== ĐÂY LÀ PHẦN ĐẦU */
@@ -330,9 +328,30 @@ html{
     color: #1E90FF;
 } */
 
-/* .menuroi{
+
+
+/* .body{
     position: relative;
 } */
+
+.nen_mo{
+    display: none;
+    z-index: 9;
+    position: fixed;
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
+    background-color: rgba(0, 0, 0, 0.400);
+}
+
+
+
+
+.menuroi{
+    display: flex;
+    position: relative;
+}
 .menuroi a{
     position: relative;
     padding: 23.96px 30px;
@@ -343,10 +362,11 @@ html{
     display: none;
     position: absolute;
     top: 0;
-    right: 200px;
-    min-width: 300px;
-    width: 100%;
-    /* background-color: goldenrod */
+    right: calc(100vw);
+    width: 300px;
+
+    height: 100vh;
+    /* background-color: goldenrod; */
     /* top: 165px; */
     /* top: 100%;
     right: 0;
@@ -378,11 +398,11 @@ html{
 
 
 
-.menuroi:active .noidung{
+/* .menuroi:focus .noidung{
     animation: all 5s ease-in-out;
     display: block;
     animation: side_right 5s ease-in-out forwards;
-}
+} */
 .noidung a:hover{
     background-color: #222;
 }
@@ -395,7 +415,7 @@ html{
     background-color: goldenrod;
 } */
 
-.logo{
+/* .logo{
     width: 100%;
     height: 67.8px;
 }
@@ -403,13 +423,13 @@ html{
     height: 100%;
     width: 100%;
     padding: 0;
-}
-/* .logo a{
+} */
+.logo a{
     padding: 14px 10px;
     font-size: 32px;
     font-family: montserrat;
     font-weight: 900;
-    background-color: rgba(0, 0, 0, 0.400);
+    background-color: rgba(0, 0, 0, 0.192);
     cursor: pointer;
 }
 .logo a:hover{
@@ -418,18 +438,26 @@ html{
 .logo span{
     font-weight: 100;
     margin-left: 5px;
-} */
+}
 /* ================================================================================================== ĐÂY LÀ PHẦN ANIMATION */
 @keyframes side_right{
     0%{
-        right: 700px;
+        right: calc(100vw);
     }
     30%{
-        right: 200px;
+        right: calc(100vw - 300px);
     }
     100%{
-        right: 200px;
-        box-shadow: 10px 10px 1000px 1000px rgba(0, 0, 0, 0.400);
+        right: calc(100vw - 300px);
+        /* box-shadow: 10px 10px 1000px 1000px rgba(0, 0, 0, 0.400); */
+    }
+}
+@keyframes overlay{
+    0%{
+        opacity: 0;
+    }
+    100%{
+        opacity: 1;
     }
 }
 /* ================================================================================================== ĐÂY LÀ PHẦN MEDIA */
@@ -446,7 +474,7 @@ html{
     }
     .header__inner{
         width: 100%;
-        max-width: 500px;
+        max-width: 1000px;
     }
     .container,
     .container__select {
