--- a/navigation_css/End_shoprtien.css
+++ b/navigation_css/End_shoprtien.css
@@ -4,11 +4,13 @@
     padding-top: 35px;
     width: 100%;
     background-color: #000000;
+    font-size: 14px;
 }
 .container-shop_end-bodypart {
     margin: 60px 40px 40px;
     max-width: 300px;
-    cursor: pointer; /* Thêm dòng này */
+    cursor: pointer; 
+    
 }
 
 .heading {
