--- a/navigation_css/End_shoprtien.css
+++ b/navigation_css/End_shoprtien.css
@@ -4,18 +4,22 @@
     padding-top: 35px;
     width: 100%;
     background-color: #000000;
-    font-size: 14px;
+    font-size: 13px;
+    margin-left: 5px;
 }
 .container-shop_end-bodypart {
-    margin: 60px 40px 40px;
+    margin: 60px 30px 40px;
     max-width: 300px;
     cursor: pointer; 
-    
+    min-width: 27px;
+    /* chữ trên cách chữ dưới 1.3 */
+    line-height: 1.3; 
 }
 
 .heading {
     margin-top: 10px;
     max-width: 400px;
+    
 }
 .heading i {
     margin: 0 5px;
