caculator bmi ok

--- a/css/index.css
+++ b/css/index.css
@@ -82,7 +82,7 @@ body{
 
 .BMI__title{
     display: flex;
-    /* justify-content: space-between; */
+    justify-content: space-between;
     margin-bottom: 20px;
 }
 
