--- a/css/truong.css
+++ b/css/truong.css
@@ -1,22 +1,30 @@
-*{
+* {
     margin: 0;
     padding: 0;
     list-style: none;
     text-decoration: none;
     font-family: Overpass;
 }
-.header{
+
+/* html {
+    font-size: 100%;
+    line-height: normal;
+} */
+
+.header {
     position: fixed;
     top: 0;
     z-index: 999;
 }
-.header{
+
+.header {
     display: flex;
     width: 100%;
     height: 68px;
     background: black;
 }
-.header__inner{
+
+.header__inner {
     display: flex;
     width: 95%;
     height: 100%;
@@ -25,15 +33,18 @@
     margin: 0 auto;
     /* background: green; */
 }
-.header__inner__logo{
+
+.header__inner__logo {
     display: block;
     cursor: pointer;
 }
-.header__inner__logo a{
+
+.header__inner__logo a {
     height: 100%;
     width: 100%;
 }
-.header__inner__logo h1{
+
+.header__inner__logo h1 {
     color: white;
     justify-content: space-between;
     align-items: center;
@@ -44,52 +55,62 @@
     font-size: 32px;
     margin-left: 10px;
 }
-.header__inner__logo span{
+
+.header__inner__logo span {
     font-weight: 100;
     margin-left: 5px;
 }
-.header__inner__navigation{
+
+.header__inner__navigation {
     margin-left: auto;
     color: #000;
 }
+
 .header__inner__navigation ul,
-.header__inner__try ul{
+.header__inner__try ul {
     display: flex;
     justify-content: space-between;
     align-items: center;
 }
+
 .header__inner__navigation li,
-.header__inner__try li{
+.header__inner__try li {
     display: flex;
     justify-content: space-between;
     align-items: center;
     padding: 0 5px;
 }
+
 .header__inner__navigation a,
-.header__inner__try a{
+.header__inner__try a {
     padding: 15px 15px;
     cursor: pointer;
     font-size: 14px;
     color: white;
     font-weight: 600;
 }
-.header__inner__navigation a:hover{
+
+.header__inner__navigation a:hover {
     color: goldenrod;
 }
-.header__inner__try a{
+
+.header__inner__try a {
     background-color: goldenrod;
-    margin-left: 10px ;
+    margin-left: 10px;
     border: 1px black solid;
 }
-.header__inner__try a:hover{
+
+.header__inner__try a:hover {
     background-color: gold;
     border: 1px white solid;
     color: black;
 }
-.header__inner__logo h1:hover{
+
+.header__inner__logo h1:hover {
     color: goldenrod;
 }
-.dropdown a{
+
+.dropdown a {
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -97,28 +118,32 @@
     position: relative;
 }
 
-.containt{
+.containt {
     display: none;
 }
-.containt a{
-    
+
+.containt a {
+
     padding: 20px 15px;
     background-color: black;
 }
-.dropdown .containt{
+
+.dropdown .containt {
     /* display: flex; */
     /* align-items: center; */
-    
+
     position: absolute;
     /* top: 100%; */
     opacity: 0;
     box-shadow: 0 8px 16px rgb(0, 0, 0.1);
 }
-.dropdown:hover .containt{
+
+.dropdown:hover .containt {
     display: block;
     animation: fadeOut 0.4s ease-in-out forwards;
 }
-.containt a:hover{
+
+.containt a:hover {
     background-color: rgb(22, 22, 22);
 }
 
@@ -131,8 +156,9 @@
     padding: 0 0;
     position: relative;
 }
-.header__inner__menu i{
-    scale: 3;
+
+.header__inner__menu i {
+    scale: 2;
     color: white;
 }
 
@@ -142,83 +168,99 @@
         top: 120%;
         opacity: 0;
     }
+
     to {
         top: 100%;
         opacity: 1;
     }
-  }
+}
+
 @keyframes fadeOut {
     from {
         top: 50%;
         opacity: 0;
         scale: 0.8;
     }
+
     to {
         top: 100%;
         opacity: 1;
         scale: 1;
     }
 }
-@keyframes quayxuong{
+
+@keyframes quayxuong {
     from {
         transform: rotate(0deg);
     }
+
     to {
         transform: rotate(90deg);
     }
 }
-@keyframes side_right{
-    0%{
+
+@keyframes side_right {
+    0% {
         opacity: 0;
         left: -300px;
         /* right: calc(100vw); */
     }
-    30%{
+
+    30% {
         opacity: 1;
     }
-    100%{
+
+    100% {
         left: 0;
         opacity: 1;
         /* right: calc(100vw - 300px); */
         /* box-shadow: 10px 10px 1000px 1000px rgba(0, 0, 0, 0.400); */
     }
 }
-@keyframes overlay{
-    0%{
+
+@keyframes overlay {
+    0% {
         opacity: 0;
     }
-    100%{
+
+    100% {
         opacity: 1;
     }
 }
+
 /* ==================== MEDIA ==================== */
-@media screen and (max-width: 1000px) { 
+@media screen and (max-width: 1000px) {
     .header__inner {
         width: 100%;
         max-width: 1000px;
     }
-    .header__inner__navigation{
+
+    .header__inner__navigation {
         display: none;
     }
-    .header__inner__try{
+
+    .header__inner__try {
         display: none;
     }
+
     .header__inner__menu {
         display: flex;
     }
 }
+
 /* ==================== ====== ==================== */
 
-.dropdown i{
+.dropdown i {
     margin-left: 2px;
     scale: 0.6;
 }
+
 .dropdown:hover .bx {
     animation: quayxuong 0.3s forwards;
     color: goldenrod;
 }
 
-.header__inner__navigation span{
+.header__inner__navigation span {
     color: goldenrod;
 }
 
@@ -265,7 +307,7 @@
     right: 0;
     margin-right: 60px; */
     /* box-shadow: 10px 10px 0px 1000px rgba(0, 0, 0, 0.400); */
-    
+
 }
 
 .noidung a {
@@ -302,9 +344,11 @@
     padding: 0;
 } */
 
-
+.header{
+    background-color: green;
+}
 .logo a {
-    padding: 25px 10px;
+    padding: 12.5px 10px;
     font-size: 32px;
     font-family: montserrat;
     font-weight: 900;
@@ -320,4 +364,3 @@
     font-weight: 100;
     margin-left: 5px;
 }
-
