--- a/navigation_css/card.css
+++ b/navigation_css/card.css
@@ -84,3 +84,33 @@
     text-align: -webkit-match-parent;
     line-height: 40px;
 }
+
+.container-card_footer {
+  display: flex;
+  justify-content: center;
+  padding-top: 35px;
+  width: 100%;
+  background-color: #ffffff;
+  font-size: 13px;
+  margin-left: 5px;
+}
+.container-card_footer-bodypart {
+  margin: 60px 30px 40px;
+  max-width: 300px;
+  cursor: pointer; 
+  min-width: 27px;
+  /* chữ trên cách chữ dưới 1.3 */
+  line-height: 1.3; 
+}
+
+.heading {
+  margin-top: 10px;
+  max-width: 400px;
+  
+}
+.icon{
+  margin: 0 5px;
+}
+li:hover{
+  color: #5c5e5f;
+}
