--- a/navigation_css/informationItem.css
+++ b/navigation_css/informationItem.css
@@ -61,25 +61,37 @@
 
 .container__pictures {
     display: flex;
+    align-items: center;
     flex-direction: column;
-    flex: 4;
+    flex: 3.5;
+    padding: 8px;
 }
 
 .container__pictures_big {
+    flex: 1;
     display: flex;
     align-items: center;
     justify-content: center;
     /* padding: 12px; */
-    border: 2px solid #3333332d;
+    max-height: 294px;
+    max-width: 294px;
+    
+    margin-bottom: 12px;
 }
 
 .container__pictures_big img {
-    max-width: 330px;
+    /* width: 330px; */
+    /* height: 100%; */
+    width: 100%;
     border-radius: 2px;
+    
+    /* aspect-ratio: 1; */
+    object-fit: cover;
+    border: 2px solid #3333332d;
 }
 
 .container__pictures_other{
-    flex: 1;
+    /* flex: 1; */
     display: flex;
     flex-direction: column;
 }
@@ -97,7 +109,9 @@
     justify-content: center;
     height: max-content;
     width: max-content;
-    border: 1px solid #333;
+    border: 1px solid rgba(51, 51, 51, 0.016);
+    border-radius: 2px;
+    overflow: hidden;
 
 }
 
@@ -113,7 +127,7 @@
     width: 40px;
     aspect-ratio: 1;
     object-fit: cover;
-    border: 1px solid #000;
+    /* border: 1px solid #000; */
     display: block;
 }
 
@@ -291,6 +305,10 @@
 
 .product__detail__status span{
     font-size: 14px;
+}
+
+.product__detail__title{
+    margin-right: 4px;
 }
 .product__detail__time-use span{
     font-size: 14px;
