--- a/navigation_css/promotion.css
+++ b/navigation_css/promotion.css
@@ -29,7 +29,8 @@ html {
     background-repeat: no-repeat;
 }
 .container{
-    background-image: url(../img/background/bgr_pro2.png);
+    /* background-image: url(../img/background/bgr_pro2.png); */
+    background-color: rgb(128, 0, 0);
     background-size: 100% 100%;
     background-repeat: no-repeat;
 }
@@ -40,20 +41,24 @@ html {
 .header__inner {
     max-width: 1000px;
 }
-.header__inner__logo h1{
+/* .header__inner__logo h1{
     color: hsl(0, 100%, 40%);
 }
 .header__inner__navigation a{
     color: hsl(0, 100%, 40%);
+} */
+.header__inner__navigation span {
+    color: hsl(0, 100%, 50%);
+    font-weight: 900;
 }
 .header__inner__try a{
     color: white;
     background-color: hsl(0, 100%, 40%);
 }
-.dropdown .header__inner__navigation__sevice{
+/* .dropdown .header__inner__navigation__sevice{
     color: hsl(0, 100%, 40%);
     font-weight: 900;
-}
+} */
 /* ================================================================================================== ĐÂY LÀ PHẦN THÂN */
 
 .container {
@@ -96,11 +101,11 @@ html {
 
 .container__colum1__inner {
     background-color: rgba(0, 42, 119, 0.075);
-    height: 50%;
+    height: 20%;
 }
 
 .container__colum1__inner2 {
-    height: 50%;
+    height: 80%;
     background-color: rgba(146, 146, 146, 0.377);
 }
 
@@ -174,6 +179,7 @@ html {
     display: grid;
 }
 .about__us__inner a{
+    width: 400px;
     margin: 15px 0;
     margin-left: 10px;
     
@@ -359,7 +365,7 @@ html {
 
 
 .footer__colum1 a:hover {
-    color: goldenrod;
+    color: hsl(0, 100%, 40%);
 }
 
 .footer__colum2 a:hover {
@@ -517,6 +523,91 @@ html {
 .footer__last__select__inner i{
     margin-right: 10px;
 }
+/* ================================================================================================== ĐÂY LÀ PHẦN CONTAINER */
+.container__colum1__inner__select{
+    height: 100px;
+    width: 90%;
+    display: flex;
+    margin: 0 auto;
+}
+.happy__newyear{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin: 0 auto;
+    margin-top: 20px;
+}
+.happy__newyear a{
+    color: white;
+    font-family: montserrat;
+    font-size: 29px;
+    font-weight: 900;
+    text-align: center;
+    /* display: flex;
+    align-items: center; */
+}
+.happy__newyear span{
+    display: flex;
+    font-family: montserrat;
+    font-size: 50px;
+    color: white;
+    font-weight: 900;
+}
+.container__colum2__inner2__select{
+    width: 90%;
+    display: flex;
+    flex-direction: column;
+    margin: 0 auto;
+
+}
+.text__box{
+    width: 100%;
+    height: 60px;
+    display: flex;
+    align-items: center;
+    margin: 0 auto;
+    background-color: whitesmoke;
+    margin-top: 10px;
+    border-radius: 5px;
+    z-index: 22;
+    box-shadow: 2px 2px 30px 2px rgba(0, 0, 0, 0.4);
+}
+.text__box a{
+    margin: 0 auto;
+    position: relative;
+    font-family: montserrat;
+    font-weight: 600;
+    color: black;
+    
+}
+.list__gift{
+    display: flex;
+    flex-direction: column;
+    margin: 0 auto;
+    margin-top: 30px;
+    background-color: hsla(0, 0%, 0%, 0.2);
+    box-shadow: 2px 2px 30px 2px rgb(0, 0, 0, 0.4);
+    width: 100%;
+    border-radius: 5px;
+}
+.list__gift a{
+    color: white;
+    font-size: 14px;
+    margin: 10px;
+    display: flex;
+}
+.list__gift span{
+    font-family: montserrat;
+    font-weight: 600;
+    display: flex;
+    align-items: center;
+}
+.list__gift .bx{
+    display: flex;
+    align-items: center;
+    margin-right: 10px;
+    font-size: 25px;
+}
 /* ================================================================================================== ĐÂY LÀ PHẦN ANIMATION */
 @keyframes slide_left{
     0%{
@@ -599,7 +690,9 @@ html {
         width: 100%;
         height: 860px;
     }
-
+    .container__colum2__inner2{
+        height: auto;
+    }
     .footer,
     .footer__select {
         flex-direction: column;
@@ -705,6 +798,7 @@ html {
 
         margin: 0 auto;
     }
+
 }
 
 /* ================================================================================================== ĐÂY LÀ PHẦN ... */
