--- a/navigation_css/promotion.css
+++ b/navigation_css/promotion.css
@@ -6,33 +6,14 @@ html {
     background-repeat: no-repeat; */
 }
 
-/* body,
-.header{
-    background-color: green;
-    max-width: 1000px;
-    min-width: 280px;
-    margin: 0 auto;
-    justify-content: space-between;
-    align-items: center;
-} */
-*/
-/* .app{
-    position: relative;
-} */
-/* .header{
-    background-color: #33333349;
-} */
-.body{
-    background-image: url(../img/background/bgr_pro.png);
-    background-size: 100% 100%;
-    /* background-size: cover; */
-    background-repeat: no-repeat;
-}
 .container{
-    /* background-image: url(../img/background/bgr_pro2.png); */
-    background-color: rgb(128, 0, 0);
-    background-size: 100% 100%;
-    background-repeat: no-repeat;
+    background-image: url(../img/background/bgr_pro3.png);
+    /* background-color: #800; */
+    background-size: cover;
+    background-origin: content-box;
+    background-position: 50% 0%;
+    background-repeat: repeat;
+    background-attachment: scroll;
 }
 /* ================================================================================================== ĐÂY LÀ PHẦN ĐẦU */
 .header{
@@ -41,15 +22,28 @@ html {
 .header__inner {
     max-width: 1000px;
 }
-/* .header__inner__logo h1{
-    color: hsl(0, 100%, 40%);
+.header__inner__logo{
+    height: 68px;
+    margin-left: 10px;
 }
-.header__inner__navigation a{
+.header__inner__logo h1{
+    margin: 0;
+    display: flex;
+    align-items: center;
+    
+}
+.header__inner__logo span{
+    display: flex;
+    align-items: center;
+    position: relative;
+    top: 3px;
+}
+/* .header__inner__navigation a{
     color: hsl(0, 100%, 40%);
 } */
 .header__inner__navigation span {
-    color: hsl(0, 100%, 50%);
-    font-weight: 900;
+    color: red;
+    /* font-weight: 900; */
 }
 .header__inner__try a{
     color: white;
@@ -365,25 +359,42 @@ html {
 
 
 .footer__colum1 a:hover {
-    color: hsl(0, 100%, 40%);
+    color: red;
 }
 
 .footer__colum2 a:hover {
     text-decoration: underline;
 }
 
-/* ================================================================================================== ĐÂY LÀ PHẦN MENU */
+/*  ĐÂY LÀ PHẦN MENU ===================================================================================*/
 
 
 .header__inner__menu {
     position: relative;
 }
-
+.header__inner__menu__bt {
+    height: 68px;
+    width: 70px;
+    position: relative;
+    /* padding: 23.96px 30px; */
+    display: flex;
+    /* background-color: rgba(0, 128, 0, 0.158); */
+}
 .header__inner__menu__bt i {
+    /* height: 68px;
+    width: 70px;
+    margin: 0;
+    padding: 0; */
+    display: flex;
+    align-items: center;
+    margin: 0 auto;
     font-size: 30px;
     color: white;
 }
-
+/* .header__inner__menu__bt:hover{
+    color: aqua;
+    background-color: #1E90FF;
+} */
 /* .header__inner__menu i:hover{
     color: #1E90FF;
 } */
@@ -413,12 +424,7 @@ html {
     position: relative;
 }
 
-.header__inner__menu__bt {
-    position: relative;
-    padding: 23.96px 30px;
-    display: block;
-    /* background-color: rgba(0, 128, 0, 0.158); */
-}
+
 
 .content {
     display: none;
@@ -561,6 +567,7 @@ html {
 
 }
 .text__box{
+    max-width: 500px;
     width: 100%;
     height: 60px;
     display: flex;
@@ -581,20 +588,25 @@ html {
     
 }
 .list__gift{
+    width: 100%;
+    max-width: 500px;
     display: flex;
     flex-direction: column;
     margin: 0 auto;
     margin-top: 30px;
     background-color: hsla(0, 0%, 0%, 0.2);
     box-shadow: 2px 2px 30px 2px rgb(0, 0, 0, 0.4);
-    width: 100%;
+    
     border-radius: 5px;
 }
 .list__gift a{
+    display: flex;
+    width: 300px;
     color: white;
     font-size: 14px;
-    margin: 10px;
-    display: flex;
+    
+    padding: 10px;
+    margin: 0 auto;
 }
 .list__gift span{
     font-family: montserrat;
@@ -607,6 +619,9 @@ html {
     align-items: center;
     margin-right: 10px;
     font-size: 25px;
+}
+.vip__gift i{
+    color: gold;
 }
 /* ================================================================================================== ĐÂY LÀ PHẦN ANIMATION */
 @keyframes slide_left{
@@ -751,13 +766,12 @@ html {
         margin: 0 auto;
         /* margin-top: 15px; */
     }
-    .footer__colum2__inner{
-        
+    /* .footer__colum2{
+        border-top: 1px white solid;
         margin-top: 10px;
-    }
+    } */
     .footer__colum2__center{
         margin-top: 10px;
-        border-top: 1px white solid;
     }
     .about__us {
         width: 100%;
