--- a/navigation_css/card.css
+++ b/navigation_css/card.css
@@ -1,7 +1,7 @@
 .container{
     background-color: #e0e0e0;
     width: 100%;
-    height: 1200px;
+    height: auto;
     /* font-family: Montserrat ,'Times New Roman', Times, serif; */
     font-size: 16px;
     margin-bottom: 30px;
@@ -11,19 +11,23 @@
 .container--feature{
     margin-top: 30px;
     display: flex;
-    flex-wrap: wrap;
+    flex-wrap: wrap; /*xuống dòng khi màn hình thu nhỏ*/
     justify-content: space-around;
 
 }
 .container-card{
-  width: 190px;
-  height: 254px;
+  min-width: 190px;
+  min-height: 254px;
+  flex: 1 0 200px;
+  margin: 10px;
   border-radius: 30px;
   background: #e0e0e0;
   box-shadow: 15px 15px 30px #bebebe,
              -15px -15px 30px #ffffff;
   flex-basis: 30%;
+  
 }
+
 .button-icon {
     display: flex;
     margin: auto;
@@ -110,7 +114,58 @@
 }
 .icon{
   margin: 0 5px;
+  align-content: center;
 }
 li:hover{
   color: #5c5e5f;
+}
+img{
+  width: 100%;
+  height: auto;
+}
+.container--table{
+  margin-top: 50px 10%;
+}
+/* table, th, td {
+  border: 1px solid rgb(117, 111, 111);
+} */
+tr:nth-child(odd) {
+  background-color: #f2f2f2; /* Màu nền cho các dòng lẻ */
+}
+table {
+  width: 100%;
+  margin: 30px auto;
+  /* display: flex; */
+  flex-direction: column;
+  border-collapse: collapse; /* Để các viền không bị trùng lặp */
+}
+
+tr{
+  /* display: flex; */
+  text-align: center;
+  height: 120px;
+}
+td {
+  border-left: 1px solid rgb(194, 189, 189); /* Thêm viền trái cho mỗi ô */
+  border-right: 1px solid rgb(194, 189, 189); /* Thêm viền phải cho mỗi ô */
+}
+
+td:first-child {
+  text-align: left;
+  padding-left: 100px;
+  border-left: none; /* Loại bỏ viền trái của ô đầu tiên trong mỗi hàng */
+}
+
+td:last-child {
+  border-right: none; /* Loại bỏ viền phải của ô cuối cùng trong mỗi hàng */
+}
+.fa-duotone{
+  align-content: center;
+  width: 10px;
+  height: 10px;
+}
+i{
+  display: inline-block;
+  /* width: 5px;
+  height: 5px; */
 }
