--- a/css/header.css
+++ b/css/header.css
@@ -6,15 +6,11 @@
     font-family: Overpass;
 }
 
-/* html {
-    font-size: 100%;
-    line-height: normal;
-} */
-
 .header {
     position: fixed;
     top: 0;
     z-index: 999;
+    /* background-color: whitesmoke; */
 }
 
 .header {
@@ -31,12 +27,14 @@
     justify-content: space-between;
     align-items: center;
     margin: 0 auto;
-    /* background: green; */
+    max-width: 1000px;
 }
 
 .header__inner__logo {
     display: block;
     cursor: pointer;
+    height: 68px;
+    margin-left: 10px;
 }
 
 .header__inner__logo a {
@@ -54,12 +52,23 @@
     font-weight: 900;
     font-size: 32px;
     margin-left: 10px;
+    margin: 0;
+    display: flex;
+    align-items: center;
 }
 
 .header__inner__logo span {
     font-weight: 100;
     margin-left: 5px;
+    display: flex;
+    align-items: center;
+    position: relative;
+    top: 3px;
 }
+
+/* .header__inner__navigation a{
+    color: hsl(0, 100%, 40%);
+} */
 
 .header__inner__navigation {
     margin-left: auto;
@@ -88,6 +97,8 @@
     font-size: 14px;
     color: white;
     font-weight: 600;
+    color: white;
+    background-color: hsl(0, 100%, 40%);
 }
 
 .header__inner__navigation a:hover {
@@ -114,7 +125,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 26px 15px;
+    /* padding: 26px 15px; */
     position: relative;
 }
 
@@ -129,11 +140,7 @@
 }
 
 .dropdown .containt {
-    /* display: flex; */
-    /* align-items: center; */
-
     position: absolute;
-    /* top: 100%; */
     opacity: 0;
     box-shadow: 0 8px 16px rgb(0, 0, 0.1);
 }
@@ -147,6 +154,10 @@
     background-color: rgb(22, 22, 22);
 }
 
+/* .dropdown .header__inner__navigation__sevice{
+    color: hsl(0, 100%, 40%);
+    font-weight: 900;
+} */
 /* ==================== MENU ==================== */
 
 .header__inner__menu {
@@ -157,10 +168,156 @@
     position: relative;
 }
 
+.header__inner__menu__bt {
+    height: 68px;
+    width: 70px;
+    position: relative;
+    /* padding: 23.96px 30px; */
+    display: flex;
+    /* background-color: rgba(0, 128, 0, 0.158); */
+}
+
+.header__inner__menu__bt i {
+    /* height: 68px;
+    width: 70px;
+    margin: 0;
+    padding: 0; */
+    display: flex;
+    align-items: center;
+    margin: 0 auto;
+    font-size: 30px;
+    color: white;
+}
+
+/* .header__inner__menu__bt:hover{
+    color: aqua;
+    background-color: #1E90FF;
+} */
+/* .header__inner__menu i:hover{
+    color: #1E90FF;
+} */
+
+.nen_mo {
+    display: none;
+    z-index: 9;
+    position: fixed;
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
+    background-color: rgba(0, 0, 0, 0.500);
+}
+
+
+.bt_dropdown {
+    display: flex;
+    position: relative;
+}
+
+
+
+
 .menuroi__link i {
     font-size: 24px;
-    /* scale: 2; */
     color: white;
+}
+
+
+
+
+
+
+.content {
+    display: none;
+    position: fixed;
+    top: 0;
+    /* opacity: 0; */
+    /* left: -300px; */
+    /* right: calc(100vw - 300px); */
+    width: 300px;
+
+    height: 100vh;
+    background-color: black;
+    /* top: 165px; */
+    /* top: 100%;
+    right: 0;
+    margin-right: 60px; */
+    /* box-shadow: 10px 10px 0px 1000px rgba(0, 0, 0, 0.400); */
+}
+
+.noidung__text1 {
+    /* font-size: 16px; */
+    display: flex;
+    align-items: center;
+    position: relative;
+    top: 2px;
+}
+
+.content a {
+    position: relative;
+    display: flex;
+    height: 68px;
+    /* align-items: center; */
+    /* padding: 26px 12px; */
+    background-color: black;
+    color: white;
+    font-size: 16px;
+    font-weight: 600;
+    border-bottom: 1px rgba(255, 255, 255, 0.1) solid;
+}
+
+.content .bx {
+    display: flex;
+    align-items: center;
+    margin-right: 15px;
+    margin-left: 20px;
+    font-size: 26px;
+}
+
+.content a:hover {
+    background-color: #222;
+}
+
+
+/* .header{
+    background-color: goldenrod;
+} */
+
+/* .logo{
+    width: 100%;
+    height: 67.8px;
+}
+.logo img{
+    height: 100%;
+    width: 100%;
+    padding: 0;
+} */
+
+
+.logo a {
+    position: relative;
+    align-items: center;
+    display: flex;
+
+    padding: 0;
+    height: 68px;
+    padding-left: 10px;
+    font-size: 32px;
+    font-family: montserrat;
+    font-weight: 900;
+    background-color: black;
+    cursor: pointer;
+}
+
+.logo a:hover {
+    background-color: rgba(0, 0, 0, 0.400);
+}
+
+.logo span {
+    font-weight: 100;
+    position: relative;
+    margin-left: 5px;
+    top: 3px;
 }
 
 /* ==================== ANIMATION ==================== */
@@ -204,7 +361,6 @@
     0% {
         opacity: 0;
         left: -300px;
-        /* right: calc(100vw); */
     }
 
     30% {
@@ -214,8 +370,6 @@
     100% {
         left: 0;
         opacity: 1;
-        /* right: calc(100vw - 300px); */
-        /* box-shadow: 10px 10px 1000px 1000px rgba(0, 0, 0, 0.400); */
     }
 }
 
@@ -247,9 +401,12 @@
     .header__inner__menu {
         display: flex;
     }
-}
+    .header__inner {
+        width: 100%;
+        max-width: 1000px;
+    }
 
-/* ==================== ====== ==================== */
+}
 
 .dropdown i {
     margin-left: 2px;
@@ -262,10 +419,9 @@
 }
 
 .header__inner__navigation span {
-    color: goldenrod;
+    /* color: goldenrod; */
+    color: red;
 }
-
-/* ================================================================================================== ĐÂY LÀ PHẦN MENU */
 
 .nen_mo {
     display: none;
@@ -278,21 +434,14 @@
     background-color: rgba(0, 0, 0, 0.400);
 }
 
-
-
-
 .menuroi {
     display: flex;
     position: relative;
 }
 
-
-
-
 .noidung a {
     display: flex;
     align-items: center;
-    /* height: 68px; */
     padding: 26px 12px;
     background-color: black;
     color: white;
@@ -301,34 +450,28 @@
     border-bottom: 1px rgba(255, 255, 255, 0.1) solid;
 }
 
-.noidung__text{
+.noidung__text {
     padding-top: 8px;
     font-size: 18px;
 }
-.menuroi__link{
+
+.menuroi__link {
     position: relative;
     padding: 23.96px 22px;
     display: flex;
     align-items: center;
     justify-content: center;
-    /* background-color: rgba(0, 128, 0, 0.158); */
 }
+
 .noidung {
     display: none;
     position: fixed;
     top: 0;
     left: -300px;
-    /* right: calc(100vw - 300px); */
     width: 300px;
     opacity: 0;
     height: 100vh;
     background-color: black;
-    /* top: 165px; */
-    /* top: 100%;
-    right: 0;
-    margin-right: 60px; */
-    /* box-shadow: 10px 10px 0px 1000px rgba(0, 0, 0, 0.400); */
-
 }
 
 
@@ -345,23 +488,6 @@
 }
 
 
-/* .header{
-    background-color: goldenrod;
-} */
-
-/* .logo{
-    width: 100%;
-    height: 67.8px;
-}
-.logo img{
-    height: 100%;
-    width: 100%;
-    padding: 0;
-} */
-
-/* .header{
-    background-color: green;
-} */
 .logo a {
     height: 68px;
     padding: 12.5px 10px;
